//(C) Copyright [2022] Hewlett Packard Enterprise Development LP
//
//Licensed under the Apache License, Version 2.0 (the "License"); you may
//not use this file except in compliance with the License. You may obtain
//a copy of the License at
//
//    http:#www.apache.org/licenses/LICENSE-2.0
//
//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
//WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
//License for the specific language governing permissions and limitations
// under the License

syntax = "proto3";

service Licenses{
rpc GetLicenseService(GetLicenseServiceRequest) returns (GetLicenseResponse){}
rpc GetLicenseCollection(GetLicenseRequest) returns (GetLicenseResponse){}
rpc GetLicenseResource(GetLicenseResourceRequest) returns (GetLicenseResponse){}
rpc InstallLicenseService(InstallLicenseRequest) returns (GetLicenseResponse){}
}

message GetLicenseServiceRequest {
    string SessionToken=1;
    string RequestParam=2;
    string URL=3;
}

message GetLicenseRequest {
    string SessionToken=1;
    string RequestParam=2;
    string URL=3;
}

message GetLicenseResourceRequest {
    string SessionToken=1;
    string RequestParam=2;
    string URL=3;
    string ResourceID=4;
}

message GetLicenseResponse {
    int32 statusCode = 1;
    string statusMessage = 2;
    map<string,string> header=3;
    bytes body = 4;
}

message InstallLicenseRequest {
    string SessionToken = 1;
    bytes RequestBody = 2;
    string URL=3;
}